--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "dependencies": {
     "@types/node": "^20.19.9",
     "@types/react": "^18.3.23",
+    "scripts": {
+  "dev": "vite",
+  "build": "tsc -b && vite build",
+  "build:dev": "vite build --mode development",
+  "preview": "vite preview"
+    }
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
